--- a/test.html
+++ b/test.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Git Branching Demo</title>
+    <h1>Git Branching Demo</h1>
 </head>
 
 <body>
