--- a/test.html
+++ b/test.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Branching Demo</title>
     <h1>Git Branching Demo</h1>
+
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
